# context-scribe

./: .coverage  .gitignore  AGENTS.md  README.md  TODO.md  pyproject.toml
.github/: settings.yml
context_scribe/: main.py
context_scribe/bridge/: mcp_client.py
context_scribe/evaluator/: auth.py  llm.py
context_scribe/observer/: antigravity_provider.py  cursor_provider.py  gemini_provider.py  provider.py
docs/: architecture.md
tests/: test_antigravity_provider.py  test_auth.py  test_bridge.py  test_cursor_provider.py  test_daemon.py  test_daemon_errors.py  test_dashboard.py  test_evaluator.py  test_evaluator_advanced.py  test_main.py  test_provider_advanced.py  test_provider_watch.py
