[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "context-scribe"
version = "0.1.0"
description = "A persistent secretary daemon to eliminate Agent Amnesia"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "watchdog",
    "rich",
    "mcp",
    "click"
]

[project.optional-dependencies]
test = [
    "pytest",
    "pytest-asyncio",
    "pytest-mock",
    "pytest-cov",
    "pytest-timeout"
]

[tool.pytest.ini_options]
markers = [
    "timeout(timeout): timeout marker used by provider watch tests"
]

[project.scripts]
context-scribe = "context_scribe.main:cli"
